--- a/contact.html
+++ b/contact.html
@@ -217,7 +217,7 @@
         <br><br><br><br><br>
 
         <div class="row footer">
-            <p>Copyright © Myles Alcala | Song Credits: </p>
+            <p>Copyright © Myles Alcala 2018 | Song Credits: Hannah Diamond - Fade Away</p>
     
             <div class="custom_audio">
                 <audio controls autoplay>
