--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
       <br><br><br><br><br>
       
       <div class="row footer">
-          <p>Copyright © Myles Alcala | Song Credits: Hannah Diamond - Every Night</p>
+          <p>Copyright © Myles Alcala 2018 | Song Credits: Shawn Wasabi - Marble Soda</p>
 
           <div class="custom_audio">
               <audio controls autoplay>
-                <source src="./assets/music/every_night.mp3">
+                <source src="./assets/music/marble_soda.mp3">
                 Error: your web browser does not support this audio player.
               </audio>
           </div>
