--- a/portfolio.html
+++ b/portfolio.html
@@ -235,11 +235,11 @@
         <br><br><br><br><br>
 
         <div class="row footer">
-            <p>Copyright © Myles Alcala | Song Credits: A.G. Cook - Superstar</p>
+            <p>Copyright © Myles Alcala 2018 | Song Credits: Shawn Wasabi - Burnt Rice</p>
     
             <div class="custom_audio">
                 <audio controls autoplay>
-                    <source src="./assets/music/superstar.mp3">
+                    <source src="./assets/music/burnt_rice.mp3">
                     Error: your web browser does not support this audio player.
                 </audio>
             </div>
